# pakr

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/designs/: 2026-04-07-pakr-cli-design.md
docs/plans/: 2026-04-07-pakr-cli-design.md
src/: clean.rs  cli.rs  config.rs  init.rs  lib.rs  main.rs  pack.rs
tests/: integration.rs
