[package]
name = "pakr"
version = "0.1.0"
edition = "2024"
description = "通用构建产物打包工具"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
zip = "8.5.1"
walkdir = "2.5.0"
chrono = "0.4.44"
regex = "1.12.3"
anyhow = "1.0.102"

[dev-dependencies]
tempfile = "3"
